Changes for 1.8.1

 - [ZBX-1821] fixed map problem if icon element is not selected (Aly)
 - [ZBX-1177] returned slide-level refresh rate (Aly)
 - [ZBX-1331] implemented auto adding selected group on host creation (Aly)
 - [ZBX-1427] fixed adding Actions through API (Aly)
 - [ZBX-1810] fixed adding user media through API (Aly)
 - [ZBX-1818] fixed API inner inconsistency in method naming (Aly)
 - [ZBX-1818] changed API version (Aly)
 - [ZBX-3] remove a comment saying syslog is used until it works from proxy config file as well (Richlv)
 - [ZBX-1801] fixed action disable link (Vedmak)
 - [ZBX-1763] added last week to SLA weekly graph (Aly)
 - [ZBX-1716] fixed server behaviour (not dying silently) when mysql database user, password or privileges change (Dmitry)
 - [ZBX-1800] updated Japanese translation; thanks to Kodai (Richlv)
 - [ZBX-1798] updated Russian translation; thanks to dotneft (Richlv)
 - [ZBX-1783] fixed problem with fixed Y axis in graphs (Aly)
 - [ZBX-1654] fixed disabled trigger map icon (Aly)
 - [ZBX-1653] fixed link from maps to events (Aly)
 - [ZBX-1164] improved error messaging in regexp form (Aly)
 - [ZBX-1774] fixed error in slide screen in case if no screens defined (Aly)
 - [ZBX-1758] improved node filtering in sqls (Aly)
 - [ZBX-1776] fixed js error for ie6 in triggers status screen (Aly)
 - [ZBX-1752] fixed error showing maps when REGISTER_GLOBALS in PHP is on (Vedmak)
 - [ZBX-954] fixed typos in changelog, error messages and frontend item hints (Richlv)
 - [ZBX-1725] fixed graphitem sortorder (Aly)
 - [ZBX-1635] fixed possible Windows agent crash when using checks based on performance counters (Sasha)
 - [ZBX-1759] fixed bug when bulk acknowledge, acknowledges already acknowledged events (Vedmak)
 - [ZBX-1596] fixed checking of allowed hosts for data sent by zabbix_sender (Dmitry)
 - [ZBX-1572] fixed processing of the performance counters defined in the configuration file using non-latin symbols (Dmitry)